[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://Assets/Background_-_level_3.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Right_Sidewalls.png" type="Texture" id=4]
[ext_resource path="res://Assets/Left_Sidewalls.png" type="Texture" id=5]
[ext_resource path="res://Scenes/BricksBoss.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Brick.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sounds/Level3/Boss Battle #4 V2.wav" type="AudioStream" id=9]
[ext_resource path="res://Scenes/Gui.tscn" type="PackedScene" id=10]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;
render_mode blend_mix;
"

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 423.819, 94.3451 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 315.285, 792.863 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 86.4427, 27.3838 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 193.469, 26.6122 )

[node name="Level3" type="Node2D" groups=[
"Level",
]]

script = ExtResource( 1 )
LifeCount = 1
NextLevel = ""

[node name="Background" type="Sprite" parent="." index="0"]

modulate = Color( 1, 0, 0, 1 )
position = Vector2( 398.504, 299.853 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Paddle" parent="." index="1" instance=ExtResource( 3 )]

speed = 325

[node name="PaddleStartPosition" type="Position2D" parent="." index="2"]

position = Vector2( 390.48, 542.231 )
_sections_unfolded = [ "Transform" ]

[node name="BallStartPosition" type="Position2D" parent="." index="3"]

position = Vector2( 388.075, 428.347 )
scale = Vector2( 1, 1.03407 )
_sections_unfolded = [ "Transform" ]

[node name="RightBound" type="Area2D" parent="." index="4"]

editor/display_folded = true
material = SubResource( 2 )
position = Vector2( 587.127, 291.591 )
scale = Vector2( 0.214351, 9.39829 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 7
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBound" index="0"]

position = Vector2( 434.177, 58.0317 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="RightBound" index="1"]

position = Vector2( 30.8403, 0.947993 )
scale = Vector2( 4.66525, 0.106402 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="LeftBound" type="Area2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 214.015, 208.054 )
scale = Vector2( 0.233815, 0.835998 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 7
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBound" index="0"]

position = Vector2( -323.038, 769.049 )
scale = Vector2( 1, 1.35241 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="LeftBound" index="1"]

position = Vector2( -38.1396, 109.383 )
rotation = 3.14159
scale = Vector2( 4.27689, 1.19618 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="BottomBound" type="Area2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( 366.027, 815.624 )
scale = Vector2( -17.5834, -6.08222 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 7
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBound" index="0"]

position = Vector2( 0, 3.04252 )
scale = Vector2( 1, 1.14006 )
shape = SubResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="TopBound" type="Area2D" parent="." index="7"]

editor/display_folded = true
position = Vector2( 400.469, -11.4674 )
scale = Vector2( 6.65625, 1.07914 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopBound" index="0"]

position = Vector2( 0, -14.8266 )
shape = SubResource( 8 )

[node name="BricksFirstBoss" parent="." index="8" instance=ExtResource( 6 )]

editor/display_folded = true
position = Vector2( 391.654, 301.632 )
_sections_unfolded = [ "Transform" ]

[node name="Brick" parent="BricksFirstBoss" index="0" instance=ExtResource( 7 )]

position = Vector2( -127.731, 0 )

[node name="Brick6" parent="BricksFirstBoss" index="1" instance=ExtResource( 7 )]

position = Vector2( -127.731, 24 )

[node name="Brick4" parent="BricksFirstBoss" index="2" instance=ExtResource( 7 )]

position = Vector2( -60.731, 0 )

[node name="Brick7" parent="BricksFirstBoss" index="3" instance=ExtResource( 7 )]

position = Vector2( -60.731, 24 )

[node name="Brick2" parent="BricksFirstBoss" index="4" instance=ExtResource( 7 )]

position = Vector2( 12.9854, 0 )

[node name="Brick8" parent="BricksFirstBoss" index="5" instance=ExtResource( 7 )]

position = Vector2( 12.9854, 24 )

[node name="Brick5" parent="BricksFirstBoss" index="6" instance=ExtResource( 7 )]

position = Vector2( 76.9854, 0 )

[node name="Brick9" parent="BricksFirstBoss" index="7" instance=ExtResource( 7 )]

position = Vector2( 76.9854, 24 )

[node name="Brick3" parent="BricksFirstBoss" index="8" instance=ExtResource( 7 )]

position = Vector2( 138.775, 0 )

[node name="Brick10" parent="BricksFirstBoss" index="9" instance=ExtResource( 7 )]

position = Vector2( 138.775, 24 )

[node name="BricksSecondBoss" parent="." index="9" instance=ExtResource( 6 )]

editor/display_folded = true
position = Vector2( 410, 96 )

[node name="Brick11" parent="BricksSecondBoss" index="2" instance=ExtResource( 7 )]

position = Vector2( 120.06, 1.21002 )

[node name="Brick16" parent="BricksSecondBoss" index="3" instance=ExtResource( 7 )]

position = Vector2( 120.06, 25.21 )

[node name="Brick12" parent="BricksSecondBoss" index="4" instance=ExtResource( 7 )]

position = Vector2( 65.06, 1.21002 )

[node name="Brick19" parent="BricksSecondBoss" index="5" instance=ExtResource( 7 )]

position = Vector2( 65.06, 25.21 )

[node name="Brick13" parent="BricksSecondBoss" index="6" instance=ExtResource( 7 )]

position = Vector2( -137.31, 0.679016 )

[node name="Brick18" parent="BricksSecondBoss" index="7" instance=ExtResource( 7 )]

position = Vector2( -137.31, 24.679 )

[node name="Brick14" parent="BricksSecondBoss" index="8" instance=ExtResource( 7 )]

position = Vector2( -1.69211, 1.78699 )

[node name="Brick17" parent="BricksSecondBoss" index="9" instance=ExtResource( 7 )]

position = Vector2( -1.69211, 25.787 )

[node name="Brick15" parent="BricksSecondBoss" index="10" instance=ExtResource( 7 )]

position = Vector2( -69.6921, 1.78699 )

[node name="Brick20" parent="BricksSecondBoss" index="11" instance=ExtResource( 7 )]

position = Vector2( -69.6921, 25.787 )

[node name="Ball" parent="." index="10" instance=ExtResource( 8 )]

collision_layer = 2
collision_mask = 15
mass = 0.01
bounce = 1.0
angular_velocity = 20.0
maxBallXSpeed = 175
maxBallYSpeed = 425
ballSpeefFactor = 0.04
hitAngle = 1
initialBallXSpeed = 125
initialBallYSpeed = 270
ballSpeedIncreaseX = 10
ballSpeedIncreaseY = 10

[node name="MusicBackground" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="MusicHitBrick" type="AudioStreamPlayer" parent="." index="12"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="MusicBound" type="AudioStreamPlayer" parent="." index="13"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="GUI" parent="." index="14" instance=ExtResource( 10 )]

margin_right = 735.0
margin_bottom = 540.0
NameBossFirst = "NAME BOSS SECOND"
NameBossSecond = "NAME BOSS SECOND"
TextStage = "STAGE 3"
NameLevel = "NAME LEVEL"

[connection signal="addScorePoints" from="." to="." method="_on_Main_addScorePoints"]

[connection signal="closePause" from="." to="." method="_on_Level_closePause"]

[connection signal="setLifePoints" from="." to="." method="_on_Level_setLifePoints"]

[connection signal="setScorePoints" from="." to="." method="_on_Level_setScorePoints"]

[connection signal="setTime" from="." to="." method="_on_Level_setTime"]

[connection signal="showWin" from="." to="." method="_on_Main_showWin"]

[connection signal="body_entered" from="Paddle" to="." method="_on_Paddle_body_entered"]

[connection signal="body_entered" from="RightBound" to="." method="_on_RightBound_body_entered"]

[connection signal="body_entered" from="LeftBound" to="." method="_on_LeftBound_body_entered"]

[connection signal="body_entered" from="BottomBound" to="." method="_on_BottomBound_body_entered"]

[connection signal="body_entered" from="TopBound" to="." method="_on_TopBound_body_entered"]

[connection signal="dead" from="BricksFirstBoss" to="." method="_on_BricksFirstBoss_dead"]

[connection signal="hitBoss" from="BricksFirstBoss" to="." method="_on_BricksFirstBoss_hitBoss"]

[connection signal="dead" from="BricksSecondBoss" to="." method="_on_BricksSecondBoss_dead"]

[connection signal="hitBoss" from="BricksSecondBoss" to="." method="_on_BricksSecondBoss_hitBoss"]


